# STM32CubeF4-SDK-CMake

./: .gitignore  CMakeLists.txt  README.md
Drivers/: CMakeLists.txt
Drivers/BSP/: CMakeLists.txt
Drivers/BSP/STM32F4-Discovery/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/Core/: CMakeLists.txt
Drivers/CMSIS/Core_A/: CMakeLists.txt
Drivers/CMSIS/DSP/: CMakeLists.txt
Drivers/CMSIS/NN/: CMakeLists.txt
Drivers/CMSIS/RTOS/: CMakeLists.txt
Drivers/CMSIS/RTOS2/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Middlewares/: CMakeLists.txt
Middlewares/ST/: CMakeLists.txt
Middlewares/ST/STM32_USB_Device_Library/: CMakeLists.txt
Middlewares/ST/STM32_USB_Host_Library/: CMakeLists.txt
